/* Circular Linked List Header File
 * Ultima 2.0
 *
 * This header file shows the private and public resources of the
 * CircularLinkedList class and its supporting class, Node.
 *
 * As there are two classes in this file, their documentation is placed at their
 * definitions, rather than up here.
 *
 * Hunter Poole
 * 03-28-2026
 */

#pragma once

#include <cstddef>
#include <iostream>
#include <mutex>
#include <pthread.h>

using namespace std;

/* template class Node
 *
 * Public:
 *
 * 1. T data.
 *    - Hold's the node's data.
 * 2. Node<T> *next.
 *    - Pointer to the next node.
 * 3. Node(T data).
 *    - Constructor, requiring T data as an argument.
 *    - Sets data as data and the next node as a nullptr.
 *    - As such, creates a node with no relation to other nodes.
 */
template <typename T> class Node {
public:
  T data;
  Node<T> *next;

  Node(T data) {
    this->data = data;
    this->next = nullptr;
  }
};

/* template class CircularLinkedList
 *
 * Private:
 *
 * 1. Node<T> *head.
 *    - Pointer to the head of the list.
 * 2. Node<T> *tail.
 *    - Pointer to the tail of the list.
 * 3. bool empty.
 *    - A bool for the empty status of the list.
 * 4. int length.
 *    - Stores the current length (size) of the list.
 *
 * Public:
 *
 * 1.  CircularLinkedList()
 *     - No-arg constructor.
 * 2.  ~CircularLinkedList()
 *     - No-arg destructor.
 * 3.  void insert_front(T value)
 *     - Insert a node with value of value in the front.
 * 4.  void insert_at(T value, int position)
 *     - Insert a node with value of value in the specified position.
 * 5.  void insert_end(T value)
 *     - Insert a node with value of value at the end.
 * 6.  void remove_front()
 *     - Removes the front node.
 * 7.  void remove_end()
 *     - Removes the end node.
 * 8.  bool is_empty()
 *     - Returns the empty bool.
 * 9.  int size()
 *     - Returns the int length.
 * 10. void advance()
 *     - Advances the list to have a new head and tail.
 *     - Useful for a "round robin clock scheduling algorithm."
 * 11. T get_front()
 *     - Returns the data portion of the head.
 * 12. int get_pos(T key)
 *     - Returns the position of the node that matches the key, if any.
 * 13. T get_next()
 *     - Returns the data portion of the node after the head.
 * 14. T get_end()
 *     - Returns the data portion of the tail.
 * 15. void move_to_key(T key)
 *     - Moves the linked list's head to point to the node matching the key.
 * 16. void set_value(T value)
 *     - Sets the current head's value to a new value.
 * 17. void dump()
 *     - print method.
 *     - Dumps the current state of the CircularLinkedList.
 */
template <typename T> class CircularLinkedList {
private:
  Node<T> *head;
  Node<T> *tail;
  bool empty;
  int length;
  mutex ListLocker;

public:
  /* CircularLinkedList() {...}
   *
   * No-arg constructor.
   *
   * Sets:
   * Head to null.
   * Tail to null.
   * empty = true.
   * length = 0.
   * Initialize ListLocker;
   */
  CircularLinkedList() {
    head = nullptr;
    tail = nullptr;
    empty = true;
    length = 0;
  };

  /* ~CircularLinkedList() {...}
   *
   * No-arg destructor.
   *
   * Removes nodes from the front until the list is empty.
   */
  ~CircularLinkedList() {
    lock_guard<std::mutex> lock(ListLocker);
    while (!empty) {
      remove_front();
    }
  }

  /* void insert_front(T value) {...}
   *
   * Inserts a node at the front of the CLL.
   *
   * 1. Creates a pointer to NewNode with value of T value.
   * 2. Locks the ListLocker.
   * 3. Checks if the list is empty.
   *    2a. If so, head & tail = NewNode.
   *    2b. Then, empty = false.
   * 4. Else...
   *    - Point NewNode to head.
   *    - Point tail to NewNode.
   *    - Update head to NewNode.
   * 5. Increment length.
   */
  void insert_front(T value) {
    Node<T> *NewNode = new Node<T>(value);

    lock_guard<std::mutex> lock(ListLocker);
    if (empty) {
      head = NewNode;
      tail = NewNode;
      head->next = tail;
      tail->next = head;
      empty = false;
    } else {
      NewNode->next = head;
      tail->next = NewNode;
      head = NewNode;
    }
    length++;
  }

  /* void insert_at(T value, int position) {...}
   *
   * Inserts a node at a specified position.
   *
   * 1. Checks if position is <= 1 or if CLL is empty.
   *    1a. If so, calls insert_front with the provided value.
   * 2. Else...
   *    - Locks ListLocker.
   *    - Creates NewNode with value.
   *    - Creates temp node at the head.
   *    - Iterates through the list until it finds the position.
   *    - Updates NewNode to point to temp's next node.
   *    - Updates temp to point to NewNode.
   *    - Increment length.
   */
  void insert_at(T value, int position) {
    if (position <= 1 || empty) {
      insert_front(value);
    } else {
      lock_guard<std::mutex> lock(ListLocker);
      Node<T> *NewNode = new Node<T>(value);
      Node<T> *temp = head;

      for (int i = 1; i < position - 1 && temp->next != head; i++) {
        temp = temp->next;
      }

      NewNode->next = temp->next;
      temp->next = NewNode;
      length++;
    }
  }

  /* void insert_end(T value) {...}
   *
   * Inserts a node at the end of the list.
   *
   * 1. Checks if the list is empty.
   *    - If so, call insert_front(value).
   * 2. Else...
   *    - Locks ListLocker.
   *    - Make a NewNode.
   *    - Set NewNode's next to be the head.
   *    - Set tail's next to be NewNode.
   *    - Set tail = NewNode.
   *    - Increment length.
   */
  void insert_end(T value) {
    if (empty) {
      insert_front(value);
    } else {
      lock_guard<std::mutex> lock(ListLocker);
      Node<T> *NewNode = new Node<T>(value);

      NewNode->next = head;
      tail->next = NewNode;
      tail = NewNode;
      length++;
    }
  }

  /* void remove_front() {...}
   *
   * Removes a node from the front of the list.
   *
   * 1. Checks if the list is empty.
   *    - If so, do nothing.
   * 2. Locks ListLocker.
   * 3. Else, if the list has only one node...
   *    - Dereference that node.
   *    - Set empty = true.
   * 4. Else,
   *    - Point tail to head's next.
   *    - Point head to head's next.
   * 5. Delete the old head.
   * 6. Decrement length.
   */
  void remove_front() {
    if (empty) {
      return;
    }

    lock_guard<std::mutex> lock(ListLocker);
    Node<T> *OldHead = head;

    if (head == tail) {
      head = nullptr;
      tail = nullptr;
      empty = true;
    } else {
      tail->next = head->next;
      head = head->next;
    }

    delete OldHead;
    length--;
  }

  /* void remove_end() {...}
   *
   * Removes a node from the end of the list.
   *
   * 1. Checks if the list is empty.
   *    - If so, do nothing.
   * 2. Locks ListLocker.
   * 3. Else, if the list has only one node...
   *    - Dereference that node.
   *    - Set empty = true.
   * 4. Else,
   *    - Make two Node pointers.
   *    - Advance both. One to tail and one previous the tail.
   *    - Point the NewTail to the head.
   *    - Make the old tail's reference to the head null.
   *    - Set tail = NewTail.
   * 5. Delete the old tail.
   * 6. Decrement length.
   */
  void remove_end() {
    if (empty) {
      return;
    }

    lock_guard<std::mutex> lock(ListLocker);
    Node<T> *OldTail = tail;

    if (head == tail) {
      head = nullptr;
      tail = nullptr;
      empty = true;
    } else {
      Node<T> *temp = head;
      Node<T> *NewTail = head;

      while (temp->next != head) {
        NewTail = temp;
        temp = temp->next;
      }

      tail = NewTail;
      tail->next = head;
      temp->next = nullptr;
    }

    delete OldTail;
    length--;
  }

  /* bool is_empty() {...}
   *
   * Returns the empty bool.
   */
  bool is_empty() {
    lock_guard<std::mutex> lock(ListLocker);
    return (empty);
  }

  /* int size() {...}
   *
   * Returns the int length.
   */
  int size() {
    lock_guard<std::mutex> lock(ListLocker);
    return length;
  }

  /* void advance() {...}
   *
   * Advances the "clock hand" for a round robin scheduler using a circular
   * linked list clock.
   *
   * 1. Checks if the list is empty.
   *    - If so, return (do nothing).
   * 2. Else,
   *    - Locks ListLocker.
   *    - tail = head
   *    - head->next = tail
   */
  void advance() {
    if (empty) {
      return;
    }

    lock_guard<std::mutex> lock(ListLocker);
    tail = head;
    head = head->next;
  }

  /* T get_front() {...}
   *
   * Returns the head's data.
   */
  T get_front() {
    lock_guard<std::mutex> lock(ListLocker);
    return (head->data);
  }

  /* int get_pos(T key) {...}
   *
   * Finds and returns the node's position # with a data portion matching the
   * key, if any.
   *
   * 1. Checks if the list is empty.
   *    - If so, return -1.
   * 2. Locks ListLocker.
   * 3. Checks if the head's data matches the key.
   *    - If so, returns 0.
   * 4. Checks if the tail's data matches the key.
   *    - If so, returns length - 1.
   * 5. Else...
   *    - Make a temp node.
   *    - Iterate through the list until its found the key or touched every
   *      node.
   *    - Returns the iterations it took to find that key, if key found.
   *    - Else, returns -1.
   */
  int get_pos(T key) {
    if (empty) {
      return -1;
    }

    lock_guard<std::mutex> lock(ListLocker);
    if (head->data == key) {
      return (0);
    } else if (tail->data == key) {
      return (length - 1);
    } else {
      Node<T> *temp = head;

      int iterations = 0;
      while (temp->data != key && iterations < length) {
        temp = temp->next;
        iterations++;
      }

      if (temp->data == key) {
        return (iterations);
      } else {
        return -1;
      }
    }
  }

  /* T get_next() {...}
   *
   * Returns the data of the node after the head.
   */
  T get_next() {
    lock_guard<std::mutex> lock(ListLocker);
    return (head->next->data);
  }

  /* T get_end() {...}
   *
   * Returns the data of the tail node.
   */
  T get_end() {
    lock_guard<std::mutex> lock(ListLocker);
    return (tail->data);
  }

  /* void move_to_key(T key) {...}
   *
   * Moves the circular linked list's head to the node whose data matches the
   * key.
   *
   * 1. Checks if the list is empty.
   *    - If so, return.
   * 2. Locks ListLocker.
   * 3. While head's data does not match key...
   *    - Advance tail to head and head to head's.
   *    - Try this for every node in the list.
   */
  void move_to_key(T key) {
    if (empty) {
      return;
    }

    lock_guard<std::mutex> lock(ListLocker);
    int iterations = 0;
    while (head->data != key && iterations < length) {
      tail = head;
      head = head->next;
      iterations++;
    }
  }

  /* void set_value(T value) {...}
   *
   * Sets the head's data portion to the provided value.
   */
  void set_value(T value) {
    lock_guard<std::mutex> lock(ListLocker);
    head->data = value;
  }

  /* void set_nextvalue(T value) {...}
   *
   * Sets the data portion of the node after the head.
   */
  void set_nextvalue(T value) {
    lock_guard<std::mutex> lock(ListLocker);
    head->next->data = value;
  }

  /* void dump() {...}
   *
   * Prints the current status of the list.
   *
   * 1. Checks if the list is empty.
   *    - If so, print that.
   * 2. Else,
   *    - Locks ListLocker.
   *    - Iterates through the list.
   *    - Prints data from every node.
   *    - Stops when it hits the head again.
   */
  void dump() {
    if (empty) {
      cout << "List is empty" << endl;
    } else {
      lock_guard<std::mutex> lock(ListLocker);
      Node<T> *temp = head;
      temp = head;

      do {
        cout << temp->data << " --> ";
        temp = temp->next;
      } while (temp != head);

      cout << head->data << endl;
    }
  }
};
